--- a/5th Edition OGL by Roll20/translations/de.json
+++ b/5th Edition OGL by Roll20/translations/de.json
@@ -274,7 +274,7 @@
 	"jack-of-all-u": "Vielfältig begabt",
 	"attr:-u": "Attribute:",
 	"tool-prof-u": "WERKZEUGFERTIGKEITEN",
-	"weapon-proficiencies-u": "WEAPON PROFICIENCIES",
+	"weapon-proficiencies-u": "WAFFENFERTIGKEITEN",
 	"other-prof-langs-u": "WEITERE FERTIGKEITEN &amp; SPRACHEN",
 	"prof-langs-u": "FERTIGKEITEN &amp; SPRACHEN",
 	"init": "Initiative",
@@ -323,7 +323,7 @@
 	"copper-piece-u": "KM",
 	"silver-piece-u": "SP",
 	"electrum-piece-u": "EM",
-	"gold-piece-u": "Gold",
+	"gold-piece-u": "GM",
 	"platinum-piece-u": "PM",
 	"warning-armor-sets-u": "<input type=\"checkbox\" name=\"attr_armorwarning\" value=\"hide\">Achtung: Mehrere Rüstungen und Schilde wurden hinzugefügt und die Rüstungsklasse kann nicht korrekt kalkuliert werden. Entferne die multiplen Ausrüstungsgegenstände.",
 	"item-name-u": "Gegenstandsname",
@@ -381,8 +381,8 @@
 	"subclass:-u": "UNTERKLASSE:",
 	"race:-u": "VOLK:",
 	"subrace:-u": "UNTERRASSE:",
-	"subrace": "Subrace:",
-	"subrace-ability-increase": "Subrace Ability Score Increase:",
+	"subrace": "Unterklasse:",
+	"subrace-ability-increase": "Unterklasse Attributs Werterhöhung:",
 	"2nd-class:-u": "2te Klasse:",
 	"lvl:-u": "Stufe:",
 	"3rd-class:-u": "3te Klasse:",
@@ -498,7 +498,7 @@
 	"racial": "Volk",
 	"class": "Klasse",
 	"feat": "Talent",
-	"feats": "Feats",
+	"feats": "Taten",
 	"other": "Sonstiges",
 	"partial": "Teilweise",
 	"show_all": "Alle anzeigen",
@@ -544,9 +544,9 @@
 	"charmancer-compendium-detail": "The Charactermancer currently supports Dungeons &amp; Dragons 5th Edition SRD and the Player's Handbook. You can add the Player's Handbook to your compendium in the Marketplace, or the game owner can share their compendium with everyone in the game.",
 	"charmancer-choose-race": "Wähle eine Rasse:",
 	"charmancer-custom-race-name": "Eigener Rassenname:",
-	"charmancer-custom-subclass-name:": "Custom sublass Name:",
-	"charmancer-additional-cantrips": "Additional Cantrips",
-	"charmancer-additional-lvl-1-spells": "Additional Level 1 Spells",
+	"charmancer-custom-subclass-name:": "Eigener Unterrassenname:",
+	"charmancer-additional-cantrips": "Zusätzliche Zaubertricks",
+	"charmancer-additional-lvl-1-spells": "Zusätzliche Stufe 1 Zauber",
 	"suggested-abilities": "Vorgeschlagene Fähigkeiten: ",
 	"class-spellcasting": "Klassenattribut für Zauberwirker: ",
 	"ability-score-increase": "Attribut Werterhöhung:",
@@ -621,58 +621,58 @@
 	"charmancer-leveler-what-is-lp": "Schau dich an, mit all dieser Erfahrung. Jetzt ist es Zeit, deine Belohnung einzufordern. Du wirst Schritt für Schritt durch den Prozess geführt und ein paar Entscheidungen treffen. Dein Charakter wird in kürzester Zeit auf der nächsten Stufe sein. Änderungen werden gespeichert während du dich durch den Prozess bewegst. Solltest du dich jedoch anders entscheiden, musst du die folgenden Schritte und Optionen erneut ausführen.",
 	"charmancer-compendium-detail-lp": "Der Charactermancer unterstützt derzeit Dungeons & Dragons 5th Edition SRD, Player's Handbook und Guildmasters 'Guide to Ravnica. Xanathars Leitfaden für Alles wird in den kommenden Wochen unterstützt. Du kannst das Handbuch für Spieler und den Leitfaden für Gildenmeister für Ravnica zu deinem Kompendium auf dem Marktplatz hinzufügen oder der Spielbesitzer kann sein Kompendium mit allen Spielern teilen.",
 	"roll:-u": "WURF:",
-	"roll": "Roll",
+	"roll": "Wurf",
 	"prerequisite:": "Voraussetzung:",
-	"back": "BACK",
-	"back-to-top": "Back to Top",
-	"choose-a-class:": "Choose a Class:",
-	"custom-class-name:": "Custom Class Name",
-	"charmancer-class-features:": "Class Features: ",
-	"charmancer-subclass-features:": "Subclass Features:",
-	"hit-die:": "Hit Die:",
-	"average": "Average",
-	"hp-u": "HP",
-	"saving-throw-proficiency": "Saving Throw Proficiency",
-	"armor": "Armor",
-	"equipment": "Equipment:",
-	"language": "Language",
-	"skill": "Skill",
-	"tool": "Tool",
-	"weapon": "Weapon",
-	"add-another-feature": "Add Another Feature",
-	"add-another-proficiency": "Add Another Proficiency",
-	"innate-spellcasting:": "Innate Spellcasting:",
-	"spellcasting-ability": "Spellcasting Ability:",
-	"number-of-cantrips": "Number of Cantrips:",
-	"number-of-lvl-1-spells": "Number of Level 1 Spells:",
-	"spell-list": "Spell List:",
-	"ability-score-method": "Ability Score Method:",
-	"select-your-choices": "Select Your Choices:",
-	"input-your-scores": "Input Your Scores:",
-	"choose-background": "Choose a Background:",
-	"personality-traits": "Personality Traits",
-	"ideal": "Ideal",
-	"bond": "Bond",
-	"flaw": "Flaw",
-	"you-have-chosen-starting-gold": "You have chosen starting gold and do not get equipment from your background.",
-	"you-have-created-custom-class": "You have created a custom class; you can add equipment to the character sheet after you have finished the Charactermancer.",
-	"arcane-is-mystery": "The Arcane is a mystery to you.",
-	"your-character-dont-have-spells-this-lvl": "Your character doesn't have spells at this level. Click “Next” to review your character!",
-	"charmancer-a-feat-represents": "A feat represents accomplishment, grit, determination, and expertise. It is the reward for hard work.",
-	"you-really-havent-done": "You really haven't done that much yet",
-	"review-your-choices": "Review your choices:",
-	"race": "Race",
-	"abilities": "Abilities",
-	"bio": "Bio",
+	"back": "ZURÜCK",
+	"back-to-top": "Zurück nach oben",
+	"choose-a-class:": "Wähle eine Klasse:",
+	"custom-class-name:": "Eigener Klassenname",
+	"charmancer-class-features:": "Klassenfähigkeiten: ",
+	"charmancer-subclass-features:": "Unterklassenfähigkeiten:",
+	"hit-die:": "Trefferwürfel:",
+	"average": "Mittel",
+	"hp-u": "TP",
+	"saving-throw-proficiency": "Rettungswurf Fertigkeit",
+	"armor": "Rüstung",
+	"equipment": "Ausrüstung:",
+	"language": "Sprache",
+	"skill": "Fähigkeit",
+	"tool": "Werkzeug",
+	"weapon": "Waffe",
+	"add-another-feature": "Anderes Merkmal hinzufügen",
+	"add-another-proficiency": "Andere Fertigkeit hinzufügen",
+	"innate-spellcasting:": "Angeborenes Zaubertalent:",
+	"spellcasting-ability": "Zauberfähigkeit:",
+	"number-of-cantrips": "Anzahl Zaubertricks:",
+	"number-of-lvl-1-spells": "Anzahl Stufe 1 Zauber:",
+	"spell-list": "Zauberliste:",
+	"ability-score-method": "Fähigkeitswert Ermittlungsmethode:",
+	"select-your-choices": "Wähle deine Auswahl:",
+	"input-your-scores": "Deine Werte eingeben:",
+	"choose-background": "Hintergrund auswählen:",
+	"personality-traits": "Persönlichkeitsmerkmale",
+	"ideal": "Ideale",
+	"bond": "Banden",
+	"flaw": "Schwäche",
+	"you-have-chosen-starting-gold": "Du hast Startgold gewählt und bekommst keine Ausrüstung von deinem Hintergrund.",
+	"you-have-created-custom-class": "Du habst eine benutzerdefinierte Klasse erstellt. Du kannst auf dem Charakterbogen, nachdem der Charactermancer beendet wurde, Ausrüstung hinzufügen.",
+	"arcane-is-mystery": "Das Arkane ist für dich ein Mysterium.",
+	"your-character-dont-have-spells-this-lvl": "Dein Charakter hat auf dieser Stufe keine Zauber. Klicke \"Next\" um deinen Charakter anzuzeigen!",
+	"charmancer-a-feat-represents": "Eine Heldentat steht für Errungenschaften, Entschlossenheit und Fachwissen. Es ist die Belohnung für harte Arbeit.",
+	"you-really-havent-done": "Du hast wirklich noch nicht so viel getan",
+	"review-your-choices": "Überprüfen deine Auswahl:",
+	"race": "Rasse",
+	"abilities": "Attribute",
+	"bio": "Biografie",
 	"name-background": "Name:",
-	"building-your-character": "Building your character...",
-	"charmancer-only-choice-left-is-on-or": "The only choice left is to press on or turn back. If you're editing an existing character, all your existing data will be lost into the void when you apply your changes.",
-	"apply-changes": "Apply Changes",
-	"pick-your-equipment": "Pick your equipment",
-	"you-havent-chosen-background": "You have not yet selected a background.",
-	"you-havent-selected-class": "You have not yet selected a class.",
-	"ability-score": "Ability Score",
-	"you-can-increase-two-abilites": "You can increase two of your abilities by 1, or one of your abilities by 2",
-	"before-leveling": "Before Leveling",
-	"after-leveling": "After Leveling"
+	"building-your-character": "Dein Charakter wird erstellt...",
+	"charmancer-only-choice-left-is-on-or": "Du hast die Wahl, drücke weiter oder zurück. Falls du einen bestehenden Charakter editierst, gehen alle deine Daten verloren beim übernehmen der Änderungen.",
+	"apply-changes": "Änderungen übernehmen",
+	"pick-your-equipment": "Wähle deine Ausrüstung",
+	"you-havent-chosen-background": "Du hast bisher noch keinen Hintegrund gewählt.",
+	"you-havent-selected-class": "Du hast bisher noch keine Klasse gewählt.",
+	"ability-score": "Attributswert",
+	"you-can-increase-two-abilites": "Du kannst zwei Attribute um 1 Punkt oder ein Attribut um 2 Punkte erhöhen",
+	"before-leveling": "Vor dem Stufenaufstieg",
+	"after-leveling": "Nach dem Stufenaufstieg"
 }
