--- a/Adventures in Middle Earth/translations/fr.json
+++ b/Adventures in Middle Earth/translations/fr.json
@@ -5,7 +5,7 @@
 	"npc-type-u": "TYPE DE PNJ",
 	"npc-type-place": "Fiélon moyen, de tout alignement mauvais",
 	"armor-class-u": "CLASSE D'ARMURE",
-	"class-u": "CLASS",
+	"class-u": "CLASSE",
 	"type-u": "TYPE",
 	"npc-armor-place": "armure d'écailles",
 	"standard-of-living-u": "NIVEAU DE VIE",
@@ -28,7 +28,7 @@
 	"saves-u": "SAUVEGARDES",
 	"skills-u": "COMPÉTENCES",
 	"acrobatics-u": "ACROBATIES",
-	"animal_handling-u": "ANIMAL HANDLING",
+	"animal_handling-u": "DRESSAGE",
 	"lore-u": "CONNAISSANCE",
 	"athletics-u": "ATHLÉTISME",
 	"deception-u": "SUPERCHERIE",
@@ -42,8 +42,8 @@
 	"performance-u": "REPRÉSENTATION",
 	"persuasion-u": "PERSUASION",
 	"riddle-u": "ÉNIGMES",
-	"shadowlore-u": "SHADOW LORE",
-	"sleight_of_hand-u": "SLEIGHT OF HAND",
+	"shadowlore-u": "CONNAISSANCE DE L'OMBRE",
+	"sleight_of_hand-u": "ESCAMOTAGE",
 	"stealth-u": "DISCRÉTION",
 	"survival-u": "SURVIE",
 	"traditions-u": "TRADITIONS",
@@ -59,7 +59,7 @@
 	"senses-u": "SENS",
 	"npc-senses-place": "vision dans le noir 36 m, perception passive 16",
 	"langs-u": "LANGUES",
-	"lang-u": "LANGUAGE",
+	"lang-u": "LANGUE",
 	"npc-langs-place": "Abyssal, Commun, Infernal",
 	"challenge-u": "FACTEUR DE PUISSANCE",
 	"xp-u": "PX",
@@ -103,15 +103,15 @@
 	"hp": "Points de Vie",
 	"speed": "Vitesse",
 	"saving-throw": "Jets de Sauvegarde",
-	"str": "Str",
+	"str": "For",
 	"dex": "Dex",
 	"con": "Con",
 	"int": "Int",
-	"wis": "Wis",
+	"wis": "Sag",
 	"cha": "Cha",
 	"skills": "Compétences",
 	"acrobatics": "Acrobaties",
-	"animal_handling": "Animal Handling",
+	"animal_handling": "Dressage",
 	"lore": "Connaissance",
 	"athletics": "Athlétisme",
 	"deception": "Supercherie",
@@ -125,8 +125,8 @@
 	"performance": "Représentation",
 	"persuasion": "Persuasion",
 	"riddle": "Énigmes",
-	"shadowlore": "Shadow Lore",
-	"sleight_of_hand": "Sleight of Hand",
+	"shadowlore": "Connaissance de l'ombre",
+	"sleight_of_hand": "Escamotage",
 	"stealth": "Discrétion",
 	"survival": "Survie",
 	"traditions": "Traditions",
@@ -220,7 +220,7 @@
 	"slayer": "Tueur",
 	"warden": "Gardien",
 	"scholar": "Érudit",
-	"treasurehunter": "Treasure Hunter",
+	"treasurehunter": "Chasseur de Trésor",
 	"warrior": "Guerrier",
 	"wanderer": "Vagabond",
 	"paladin": "Paladin",
@@ -231,9 +231,9 @@
 	"wizard": "Magicien",
 	"class-level-u": "CLASSE &amp; NIVEAU",
 	"background-u": "HISTORIQUE",
-	"background": "Background",
+	"background": "Historique",
 	"culture-u": "CULTURE",
-	"shadow-weakness-u": "SHADOW WEAKNESS",
+	"shadow-weakness-u": "FAIBLESSE DE L’OMBRE",
 	"exp-pts-u": "POINTS D’EXPÉRIENCE",
 	"inspiration-u": "INSPIRATION",
 	"prof-bonus-u": "BONUS DE MAÎTRISE",
@@ -278,13 +278,13 @@
 	"attr-u": "ATTRIBUT",
 	"prof-bonus:-u": "BONUS DE MAÎTRISE:",
 	"prof-u": "COMPÉTENT",
-	"proficency-u": "PROFICIENCY",
+	"proficency-u": "MAÎTRISE",
 	"expertise-u": "EXPERTISE",
 	"jack-of-all-u": "TOUCHE-À-TOUT",
 	"attr:-u": "ATTRIBUT:",
 	"tool-prof-u": "OUTILS MAÎTRISÉS",
 	"other-prof-langs-u": "AUTRES MAÎTRISES &amp; LANGUES",
-	"prof-langs-u": "PROFICIENCIES &amp; LANGUAGES",
+	"prof-langs-u": "AUTRES MAÎTRISES &amp; LANGUES",
 	"init": "Inititative",
 	"init-u": "INITIATIVE",
 	"hp-max-u": "Points de Vie Maximum",
@@ -320,10 +320,10 @@
 	"description:-u": "DESCRIPTION :",
 	"description-place": "Jusqu'à 2 créatures à moins de 5 pieds",
 	"atk-spellcasting-u": "ATTAQUES &amp; INCANTATIONS",
-	"copper-u": "CP",
-	"silver-u": "SP",
+	"copper-u": "PC",
+	"silver-u": "PA",
 	"electrum-piece-u": "PE",
-	"gold-u": "GP",
+	"gold-u": "PO",
 	"platinum-piece-u": "PP",
 	"warning-armor-sets-u": "<input type=\"checkbox\" name=\"attr_armorwarning\" value=\"hide\">ATTENTION - PLUSIEURS ENSEMBLES D’ARMURE OU DE BOUCLIERS ONT ÉTÉ AJOUTÉS ET LA CA N’EST PAS CALCULÉE CORRECTEMENT. DÉSÉQUIPEZ LA PIÈCE D'ARMURE DEPUIS LES DÉTAILS DE L'OBJET.",
 	"item-name-u": "NOM DE L'OBJET",
@@ -337,9 +337,9 @@
 	"encumbered-u": "ENCOMBRÉ",
 	"over-carrying-cap-u": "SURCHARGÉ",
 	"equipment-u": "ÉQUIPEMENT",
-	"distinctive-quality-u": "DISTINCTIVE QUALITY",
-	"specialty-u": "SPECIALTY",
-	"hope-u": "HOPE",
+	"distinctive-quality-u": "QUALITÉ DISTINCTIVE",
+	"specialty-u": "SPÉCIALITÉ",
+	"hope-u": "ESPOIR",
 	"dispair-u": "DESPAIR",
 	"class-resource-u": "RESSOURCE DE CLASSE",
 	"other-resource-u": "AUTRES RESSOURCES",
@@ -354,11 +354,11 @@
 	"eye-u": "YEUX",
 	"skin-u": "PEAU",
 	"hair-u": "CHEVEUX",
-	"patrons-sanctuaries-u": "PATRONS &amp; SANCTUARIES",
+	"patrons-sanctuaries-u": "PATRONS &amp; SANCTUAIRES",
 	"char-backstory-u": "HISTOIRE DU PERSONNAGE",
-	"tale-of-years-u": "TALE OF YEARS",
+	"tale-of-years-u": "RÉCIT DES ANNÉES",
 	"add-feats-traits-u": "CAPACITÉS &amp; TRAITS SUPPLÉMENTAIRES",
-	"feat-u": "VIRTUE",
+	"feat-u": "VERTU",
 	"treasure-u": "TRÉSOR",
 	"spell-save-dc-u": "DD DE SVG DU SORT",
 	"cantrips-u": "SORTS MINEURS",
@@ -411,7 +411,7 @@
 	"inventory:-u": "INVENTAIRE&nbsp;:",
 	"compendium-compatible": "Compatible Compendium",
 	"simple": "Simple",
-	"encumbrance:-u": "ENCUMBRANCE:",
+	"encumbrance:-u": "ENCOMBREMENT:",
 	"ammo-tracking:-u": "SUIVI DES MUNITIONS&nbsp;:",
 	"general-opts-u": "OPTIONS GÉNÉRALES",
 	"transition-text": "Cliquer sur une des images ci-dessous va reformater les données de votre feuille actuelle vers le format indiqué. Ces modifications sont permanentes et ne peuvent être annulées.",
@@ -455,8 +455,8 @@
 	"cd-bar3-max-desc:-u": "On Default Tokens created by doing a Compendium drop onto the virtual table top, set the Bar 3's max to this attribute.",
 	"cd-bar3-link-desc:-u": "On Default Tokens created by doing a Compendium drop onto the virtual table top, link the Bar 3's value to this attribute. If set this will override all other bar settings.",
 	"npc-name-in-rolls:-u": "NPC NAME IN ROLLS:",
-	"show": "Show",
-	"hide": "Hide",
+	"show": "Afficher",
+	"hide": "Masquer",
 	"npc-name-in-rolls-desc:-u": "In NPC roll results, show or hide the name of the NPC in the roll result card.",
 	"public:-u": "PUBLIC",
 	"to-gm:-u": "TO <span class='togm'>GM</span>",
@@ -524,8 +524,8 @@
 	"footer-wiki-link": "For more information about this character sheet, its functionality, or uses, please check out the Roll20 Wiki for official documentation. https://wiki.roll20.net/5th_Edition_OGL_by_Roll20",
 	"accepting-drop-u": "ACCEPTING DROP FROM COMPENDIUM",
 	"are_you_sure": "Are you sure you want to turn this character into a ",
-	"yes": "Yes",
-	"cancel": "Cancel",
-	"choose": "Choose",
-	"innate:-u": "INNATE:"
+	"yes": "Oui",
+	"cancel": "Annuler",
+	"choose": "Choisir",
+	"innate:-u": "INNÉ&nbsp;:"
 }
