--- a/Eclipse Phase V2/translations/fr.json
+++ b/Eclipse Phase V2/translations/fr.json
@@ -43,10 +43,10 @@
 	"insanity rating short": "SA",
 	"insanity rating": "Seuil d'Aliénation",
 	"stress": "Stress",
-	"traumas": "Traumas",
+	"traumas": "Traumatismes",
 	"derived stats": "Statistiques Dérivées",
 	"initiative": "Initiative",
-	"total": "Total",
+	"total": "Total ",
 	"temporary short": "Temp.",
 	"skill": "Compétence",
 	"skills": "Compétences",
@@ -75,7 +75,7 @@
 	"pilot": "Pilotage",
 	"program": "Programmation",
 	"provoke": "Provocation",
-	"psi": "Psi",
+	"psi": "Psy",
 	"psi skill": "Compétence Psi",
 	"research": "Recherche",
 	"survival": "Survie",
@@ -109,7 +109,7 @@
 	"action turns": "Tour(s) d'action",
 	"minutes": "Minute(s)",
 	"hours": "Heure(s)",
-	"description": "Description",
+	"description": "Description ",
 	"ranged weapon": "Armes à Distance",
 	"melee weapon": "Armes de Mêlée",
 	"seeker weapon and grenade": "Missiles et grenades",
@@ -160,7 +160,7 @@
 	"r-rep": "R-Rep",
 	"x-rep": "X-Rep",
 	"language": "Langues",
-	"forks": "Forks",
+	"forks": "Branches",
 	"backup": "Sauvegardes",
 	"rez point": "Points d'XP",
 	"rp spent": "XP Dépensé",
