--- a/Forbidden_Lands/translations/fr.json
+++ b/Forbidden_Lands/translations/fr.json
@@ -22,7 +22,7 @@
 	"base": "Base",
 	"base-dice": "Dé de base",
 	"base-attr-abbr": "Base/Attr",
-	"base-attribute-dice": "Base/Attribute Dice",
+	"base-attribute-dice": "Dé d'Attribut/de base",
 	"body": "Corps",
 	"bonus": "Bonus",
 	"bread": "Pain",
@@ -38,7 +38,7 @@
 	"cold": "Frigorifié",
 	"condition-u": "CONDITIONS",
 	"consumable-u": "CONSOMMABLES",
-	"consumable-note": "**note:** be sure to manually reduce the consumable die on the sheet if you roll bane.",
+	"consumable-note": "**note** assurez vous de réduire manuellement le dé consommable sur la feuille si vous lancez le dé bane.",
 	"copper": "Cuivre",
 	"crafting": "Artisanat",
 	"critical-injuries": "Blessures Critique",
@@ -56,7 +56,7 @@
 	"die": "Dé",
 	"distant": "Distant",
 	"dmg-abbr": "Dég",
-	"don": "Don",
+	"don": "Porté",
 	"duration": "Durée",
 	"effects": "Effets",
 	"empathy": "Empathie",
@@ -125,7 +125,7 @@
 	"on-mount": "Sur la monture",
 	"one-hand-abbr": "1M",
 	"other": "Autre",
-	"pack-rat": "Pack Rat Talent?",
+	"pack-rat": "Talent d'accumulateur compulsif?",
 	"pack-rat-title": "Vous pouvez porter des items supplémentaires.",
 	"parry": "Parade",
 	"performance": "Représentation",
@@ -150,7 +150,7 @@
 	"reset-dice": "Réinitialiser la réserve de dés.",
 	"roll": " Jet ",
 	"roll-dice": "Jeter les dés !",
-	"roll-dice-api": "Roll API Dice!",
+	"roll-dice-api": "Jeter les dés API!",
 	"roll-dice-66": "Lancer d66!",
 	"salary": "Salaire",
 	"scouting": "Éclaireur",
