--- a/Pathfinder Second Edition by Roll20/translations/pt.json
+++ b/Pathfinder Second Edition by Roll20/translations/pt.json
@@ -806,5 +806,9 @@
 	"pc-or-npc-info": "Essa opção de PDM define novos personagens para usar o estilo do cartão de ficha de PDM como padrão. Útil se os personagens já foram criados e todas as fichas de personagens novos adicionados ao jogo provavelmente representarão personagens não jogáveis.",
 	"qty": "qtd",
 	"quantity": "quantidade",
-	"whisp-rolls-gm-info": "Toda rolagem da ficha é enviada aos jogadores no chat por padrão. Opção de Rolagem do Mestre da a opção de enviar rolagens privadas apenas para você e o mestre. Sempre usar Rolagem do Mestre enviará as rolagens apenas para você e para o mestre."
+	"whisp-rolls-gm-info": "Toda rolagem da ficha é enviada aos jogadores no chat por padrão. Opção de Rolagem do Mestre da a opção de enviar rolagens privadas apenas para você e o mestre. Sempre usar Rolagem do Mestre enviará as rolagens apenas para você e para o mestre.",
+	"melee_attack_damage_additional": "melee attack additional damage",
+	"damage_additional": "additional damage",
+	"damage_additional_placeholder": "[[1d6]] acid, [[1d6]] chaotic, and [[1d6]] evil, and [[2d6]] slashing vs. plants",
+	"range_attack_damage_additional": "range attack additional damage"
 }
