--- a/Pathfinder Second Edition by Roll20/translations/zh.json
+++ b/Pathfinder Second Edition by Roll20/translations/zh.json
@@ -802,9 +802,13 @@
 	"x/day": "X/天",
 	"xp": "xp",
 	"disclaimer": "© 2019 Paizo Inc. Paizo、Paizo golem標誌、Pathfinder和Pathfinder標誌均為Paizo Inc. 的註冊商標。Pathfinder Adventure Path, Pathfinder Adventure Path, Pathfinder Roleplaying Game, Pathfinder World Guide, Pathfinder ' P ' logo均為Paizo Inc. 的商標。所有Paizo的標題和角色名稱以及獨特的相似性都是Paizo, Inc. 在美國和其他國家的財產和版權。(正體中文翻譯: 白貓)",
-	"pc-or-npc": "PC or NPC",
-	"pc-or-npc-info": "This option sets new characters to default to the PC character sheet or NPC card style sheet. It defaults to PC (Player Character). Set to NPC is useful if the player characters have already been created and all new character sheets added to the game will likely represent non player characters.",
+	"pc-or-npc": "PC或NPC",
+	"pc-or-npc-info": "該選項設置新角色預設為PC角色卡或NPC卡格式。預設設定為PC（玩家角色）。如果玩家角色都已經創好了，並且之後加入到遊戲中所有的新角色都是NPC時，把此設定設置為NPC會很有幫助。",
 	"qty": "qty",
-	"quantity": "quantity",
-	"whisp-rolls-gm-info": "All sheet rolls are sent to all players in chat by default. Query Whisper option gives you a prompt with each roll of whether or not the roll should be sent privately only to yourself and the GM. Always Whisper Rolls will send all rolls only to yourself and the GM."
+	"quantity": "數量",
+	"whisp-rolls-gm-info": "預設情形下，所有角色卡的擲骰結果都會在聊天中發送給所有玩家。 “擲骰時詢問”選項將會在每次擲骰跳出詢問視窗，決定擲骰是否暗骰為只有你和GM會知道。總是暗骰會將所有的擲骰只發送給自己和GM。",
+	"melee_attack_damage_additional": "melee attack additional damage",
+	"damage_additional": "additional damage",
+	"damage_additional_placeholder": "[[1d6]] acid, [[1d6]] chaotic, and [[1d6]] evil, and [[2d6]] slashing vs. plants",
+	"range_attack_damage_additional": "range attack additional damage"
 }
