--- a/Pathfinder Second Edition by Roll20/translations/zu.json
+++ b/Pathfinder Second Edition by Roll20/translations/zu.json
@@ -806,5 +806,9 @@
 	"pc-or-npc-info": "crwdns120276:0crwdne120276:0",
 	"qty": "crwdns121162:0crwdne121162:0",
 	"quantity": "crwdns121164:0crwdne121164:0",
-	"whisp-rolls-gm-info": "crwdns120278:0crwdne120278:0"
+	"whisp-rolls-gm-info": "crwdns120278:0crwdne120278:0",
+	"melee_attack_damage_additional": "crwdns121502:0crwdne121502:0",
+	"damage_additional": "crwdns121504:0crwdne121504:0",
+	"damage_additional_placeholder": "crwdns121506:0[1d6]crwdnd121506:0[1d6]crwdnd121506:0[1d6]crwdnd121506:0[2d6]crwdne121506:0",
+	"range_attack_damage_additional": "crwdns121508:0crwdne121508:0"
 }
