--- a/SavageWorlds-Tabbed/translations/fr.json
+++ b/SavageWorlds-Tabbed/translations/fr.json
@@ -1,4 +1,4 @@
-{
+﻿{
     "wild-card": "Joker",
     "mook": "Extra",
     "stat-block-button": "Bloc de stat",
@@ -103,15 +103,15 @@
     "health": "Santé",
     "wounds": "Blessures",
     "max-wounds": "Max Blessures",
-    "reduce-reason":"Atouts/Capacités qui réduisent les pénalités de blessures",
-    "increase-reason":"Handicaps/Capacités qui augmentent les pénalités de blessures",
-    "max-reason":"Atouts/Capacités qui changent la pénalité maximale de blessures",
+    "reduce-reason": "Atouts/Capacités qui réduisent les pénalités de blessures",
+    "increase-reason": "Handicaps/Capacités qui augmentent les pénalités de blessures",
+    "max-reason": "Atouts/Capacités qui changent la pénalité maximale de blessures",
     "of": "sur",
     "fatigue": "Fatigue",
     "max-fatigue": "Max Fatigue level",
-    "reduce-reason-fatigue":"Atouts/Capacités qui réduisent les pénalités de fatigue",
-    "increase-reason-fatigue":"Handicaps/Capacités qui augmentent les pénalités de fatigue",
-    "max-reason-fatigue":"Atouts/Capacités qui changent la pénalité maximale de fatigue",
+    "reduce-reason-fatigue": "Atouts/Capacités qui réduisent les pénalités de fatigue",
+    "increase-reason-fatigue": "Handicaps/Capacités qui augmentent les pénalités de fatigue",
+    "max-reason-fatigue": "Atouts/Capacités qui changent la pénalité maximale de fatigue",
     "no-nerves-of-steel": "Sans Nerfs d'Acier",
     "nerves-of-steel": "Nerfs d'Acier",
     "improved-nerves-of-steel": "Nerfs d'acier améliorés",
@@ -750,13 +750,13 @@
     "total-gear-weight-carried": "Poids total équipement",
     "powers": "Pouvoirs",
     "power": "Pouvoir",
-    "ab-section-header":"Intitulé de la section Pouvoirs : ",
-    "ab-power-column-name":"Intitulé de la colonne Nom du Pouvoir : ",
-    "ab-pp":"Abbréviation pour Points de Pouvoir : ",
-    "ab-name":"Arcane : ",
-    "ab-pp-name":"Nom pour Points de Pouvoirs : ",
-    "ab-color-indicator":"Couleur d'arcane : ",
-    "invested":"investis",
+    "ab-section-header": "Intitulé de la section Pouvoirs : ",
+    "ab-power-column-name": "Intitulé de la colonne Nom du Pouvoir : ",
+    "ab-pp": "Abbréviation pour Points de Pouvoir : ",
+    "ab-name": "Arcane : ",
+    "ab-pp-name": "Nom pour Points de Pouvoirs : ",
+    "ab-color-indicator": "Couleur d'arcane : ",
+    "invested": "investis",
     "power-point-abbr-u": "PP",
     "power-point-abbr-u-invested": "PP Investis",
     "power-points": "Points de Pouvoir",
@@ -954,6 +954,7 @@
     "use-threat-rating": "Use Threat Rating",
     "hide-powers-desc": "Hide the Arcanum tab on the Character Sheet.  This will hide not only Spells/Powers, but Talismans.",
     "unshake-button-desc": "Show the Unshake Button. This will appear on the main character sheet tab uner the Health section.",
+    "soak-button-desc": "Show the Soak Button. This will appear on the main character sheet tab uner the Health section.",
     "wild-card-icon-desc": "Select the Wild Card icon to be used in the Stat Block output.",
     "no-power-points-desc": "Check this box to not use Power Points with the Arcane Backgrounds.",
     "variable-bonus-damage-desc": "Selecting the Variable Bonus Damage (Raised Based) will prompt for the Bonus Damage Die Type. This is mostly useful for Damage only rolls. The other allows you to set a variable bonus type that is static and will always be rolled regardless of number of Raises; this is useful for Edges and Hindrances that have this type of effect.",
@@ -1095,49 +1096,48 @@
     "rename-skill-throwing": "Renommer : Lancer",
     "rename-skill-tracking": "Renommer : Pistage",
     "rename-skill-weird-science": "Renommer : Science étrange",
-    "use-skill-academics":"Utiliser : Sciences humaines",
-    "use-skill-athletics":"Utiliser : Athlétisme",
-    "use-skill-battle":"Utiliser : Batailles",
-    "use-skill-boating":"Utiliser : Navigation",
+    "use-skill-academics": "Utiliser : Sciences humaines",
+    "use-skill-athletics": "Utiliser : Athlétisme",
+    "use-skill-battle": "Utiliser : Batailles",
+    "use-skill-boating": "Utiliser : Navigation",
     "use-skill-climbing": "Utiliser : Escalade",
-    "use-skill-common-knowledge":"Utiliser : Culture générale",
-    "use-skill-driving":"Utiliser : Conduite",
-    "use-skill-electronics":"Utiliser : Électronique",
-    "use-skill-faith":"Utiliser : Foi",
-    "use-skill-focus":"Utiliser : Focus",
-    "use-skill-gambling":"Utiliser : Jeu",
-    "use-skill-guts":"Utiliser : Tripes",
-    "use-skill-hacking":"Utiliser : Piratage",
-    "use-skill-healing":"Utiliser : Soins",
-    "use-skill-intimidation":"Utiliser : Intimidation",
-    "use-skill-investigation":"Utiliser : Investigation",
-    "use-skill-native-language":"Utiliser : Langue natale",
-    "use-skill-lockpicking":"Utiliser : Crochetage",
-    "use-skill-notice":"Utiliser : Perception",
-    "use-skill-occult":"Utiliser : Occultisme",
-    "use-skill-performance":"Utiliser : Représentation",
-    "use-skill-persuasion":"Utiliser : Persuasion",
-    "use-skill-piloting":"Utiliser : Pilotage",
-    "use-skill-psionics":"Utiliser : Psioniques",
-    "use-skill-repair":"Utiliser : Réparation",
-    "use-skill-research":"Utiliser : Recherche",
-    "use-skill-riding":"Utiliser : Équitation",
-    "use-skill-ritual":"Utiliser : Rituel",
-    "use-skill-science":"Utiliser : Sciences",
-    "use-skill-shooting":"Utiliser : Tir",
-    "use-skill-spellcasting":"Utiliser : Incantation",
-    "use-skill-stealth":"Utiliser : Discrétion",
-    "use-skill-streetwise":"Utiliser : Réseaux",
-    "use-skill-survival":"Utiliser : Survie",
-    "use-skill-swimming":"Utiliser : Natation",
-    "use-skill-taunt":"Utiliser : Sarcasme",
-    "use-skill-thievery":"Utiliser : Filouterie",
-    "use-skill-throwing":"Utiliser : Lancer",
-    "use-skill-tracking":"Utiliser : Pistage",
-    "use-skill-weird-science":"Utiliser : Science étrange",
-    "skill-allowed-desc":"Cocher pour autoriser l'utilisation de cette compétence dans votre univers.",
-    "linked-to-attribute":"Lié à l'attribut :",
-
+    "use-skill-common-knowledge": "Utiliser : Culture générale",
+    "use-skill-driving": "Utiliser : Conduite",
+    "use-skill-electronics": "Utiliser : Électronique",
+    "use-skill-faith": "Utiliser : Foi",
+    "use-skill-focus": "Utiliser : Focus",
+    "use-skill-gambling": "Utiliser : Jeu",
+    "use-skill-guts": "Utiliser : Tripes",
+    "use-skill-hacking": "Utiliser : Piratage",
+    "use-skill-healing": "Utiliser : Soins",
+    "use-skill-intimidation": "Utiliser : Intimidation",
+    "use-skill-investigation": "Utiliser : Investigation",
+    "use-skill-native-language": "Utiliser : Langue natale",
+    "use-skill-lockpicking": "Utiliser : Crochetage",
+    "use-skill-notice": "Utiliser : Perception",
+    "use-skill-occult": "Utiliser : Occultisme",
+    "use-skill-performance": "Utiliser : Représentation",
+    "use-skill-persuasion": "Utiliser : Persuasion",
+    "use-skill-piloting": "Utiliser : Pilotage",
+    "use-skill-psionics": "Utiliser : Psioniques",
+    "use-skill-repair": "Utiliser : Réparation",
+    "use-skill-research": "Utiliser : Recherche",
+    "use-skill-riding": "Utiliser : Équitation",
+    "use-skill-ritual": "Utiliser : Rituel",
+    "use-skill-science": "Utiliser : Sciences",
+    "use-skill-shooting": "Utiliser : Tir",
+    "use-skill-spellcasting": "Utiliser : Incantation",
+    "use-skill-stealth": "Utiliser : Discrétion",
+    "use-skill-streetwise": "Utiliser : Réseaux",
+    "use-skill-survival": "Utiliser : Survie",
+    "use-skill-swimming": "Utiliser : Natation",
+    "use-skill-taunt": "Utiliser : Sarcasme",
+    "use-skill-thievery": "Utiliser : Filouterie",
+    "use-skill-throwing": "Utiliser : Lancer",
+    "use-skill-tracking": "Utiliser : Pistage",
+    "use-skill-weird-science": "Utiliser : Science étrange",
+    "skill-allowed-desc": "Cocher pour autoriser l'utilisation de cette compétence dans votre univers.",
+    "linked-to-attribute": "Lié à l'attribut :",
     "known-issues": "Bugs connus",
     "statblock-doesnt-support": "Statblock Output Button doesn't currently output:",
     "spell-information": "Spell information",
@@ -1145,10 +1145,10 @@
     "talismans-are-missing-from-sheet": "Talismans are missing from the sheet completely",
     "derived-stats-not-using-sheet-workers": "Derived Stats weren't using Sheet Workers and should have been.",
     "soak-button-added": "Added a Soak button (based on vigor, allow to set mods dedicated to Soak rolls)",
-    "allow-skills-settings":"Ability to select which skills are available in your setting (and hide them by default in the character sheet).",
-    "missing-translations-with-multiple-ab":"Added translation extensions for the new multiple arcane background sections.",
-    "another-wound-translation-issue-french":"Fixed again issue with Wounds/Fatigue in certain languages (when label too long, like in French).",
-    "fixed-labels-and-i18n-in-health":"In Wounds and Fatigue modifiers section : fixed labels, added tooltips and enabled additionnal translations.",
+    "allow-skills-settings": "Ability to select which skills are available in your setting (and hide them by default in the character sheet).",
+    "missing-translations-with-multiple-ab": "Added translation extensions for the new multiple arcane background sections.",
+    "another-wound-translation-issue-french": "Fixed again issue with Wounds/Fatigue in certain languages (when label too long, like in French).",
+    "fixed-labels-and-i18n-in-health": "In Wounds and Fatigue modifiers section : fixed labels, added tooltips and enabled additionnal translations.",
     "rename-skills-from-game-settings": "Allow to rename skills directly from game settings page",
     "wounds-fatigue-wonky-display": "Wounds and Fatigue modifiers display going wonky when translations where too long (e.g. French). Fixed by reducing the font size for all languages.",
     "allow-translations-academics": "Allowed Academics (derived stat) and Acedemics (SWADE Skill) to have different translations (e.g. French).",
@@ -1171,12 +1171,12 @@
     "arcane-background-indicator-description": "Arcane Background Indicator: When there's more than one (1) arcane background, the Arcane Background Indicaor allows you to pick a color to associate with each arcane background. Once an individual power has been tied to an arcane background (defaults to the first arcane background), the power row will use the indicator as a background color, allowing you to quickly identify which arcane background each power goes with.  The power points display will also use the Arcane Background Indicator as the background color as quick reminder of what each color represents.",
     "fixed-copyright-issue": "Fixed the copyright notification issues.",
     "start-attributes-at-d6-not-d4": "Attributs par défaut à d6 au lieu de d4",
-    "fix-rename-climbing-piloting-translations":"Fix translations for Renaming Piloting and Climbing skills.",
-    "fix-attempt-allow-skill-on-by-default":"Attempt to fix skills in Game Settings being all disabled by default (instead of enabled)",
-    "change-linked-attribute-of-any-skill":"Ability to change linked attribute of any skill.",
-    "enable-soak-from-settings":"Can enable/disable Soak button from the game settings.",
-    "easier-disallow-skill-from-setting":"Made it easier to enable/disable a skill in a setting (can click the skill name, not just the checkbox, in config panel)",
-    "fix-show-modifier-not-working-at-start":"Fix Show Modifiers option not working (until you unset and set it again) despite being on by default.",
+    "fix-rename-climbing-piloting-translations": "Fix translations for Renaming Piloting and Climbing skills.",
+    "fix-attempt-allow-skill-on-by-default": "Attempt to fix skills in Game Settings being all disabled by default (instead of enabled)",
+    "change-linked-attribute-of-any-skill": "Ability to change linked attribute of any skill.",
+    "enable-soak-from-settings": "Can enable/disable Soak button from the game settings.",
+    "easier-disallow-skill-from-setting": "Made it easier to enable/disable a skill in a setting (can click the skill name, not just the checkbox, in config panel)",
+    "fix-show-modifier-not-working-at-start": "Fix Show Modifiers option not working (until you unset and set it again) despite being on by default.",
     "effect": "Effet",
     "activate-talisman": "Activer Talisman",
     "added-talismans-section": "(Re-)Added Talismans section (activate in configuration tab)",
