--- a/SavageWorlds-Tabbed/translations/zu.json
+++ b/SavageWorlds-Tabbed/translations/zu.json
@@ -1,4 +1,4 @@
-{
+﻿{
     "wild-card": "crwdns66961:0crwdne66961:0",
     "mook": "crwdns66962:0crwdne66962:0",
     "stat-block-button": "crwdns66963:0crwdne66963:0",
@@ -682,6 +682,11 @@
     "sma-u": "crwdns87270:0crwdne87270:0",
     "spi-u": "crwdns87272:0crwdne87272:0",
     "vig-u": "crwdns87274:0crwdne87274:0",
+    "(AGL)": "crwdns121322:0crwdne121322:0",
+    "(SMA)": "crwdns121324:0crwdne121324:0",
+    "(SPI)": "crwdns121326:0crwdne121326:0",
+    "(STR)": "crwdns121328:0crwdne121328:0",
+    "(VIG)": "crwdns121330:0crwdne121330:0",
     "fencingstyle": "crwdns87276:0crwdne87276:0",
     "fencing-info": "crwdns87278:0crwdne87278:0",
     "linked-attribute": "crwdns87280:0crwdne87280:0",
@@ -949,6 +954,7 @@
     "use-threat-rating": "crwdns105232:0crwdne105232:0",
     "hide-powers-desc": "crwdns105234:0crwdne105234:0",
     "unshake-button-desc": "crwdns105236:0crwdne105236:0",
+    "soak-button-desc": "crwdns121332:0crwdne121332:0",
     "wild-card-icon-desc": "crwdns105238:0crwdne105238:0",
     "no-power-points-desc": "crwdns105240:0crwdne105240:0",
     "variable-bonus-damage-desc": "crwdns105242:0crwdne105242:0",
@@ -1131,6 +1137,7 @@
     "use-skill-tracking": "crwdns119334:0crwdne119334:0",
     "use-skill-weird-science": "crwdns119336:0crwdne119336:0",
     "skill-allowed-desc": "crwdns119338:0crwdne119338:0",
+    "linked-to-attribute": "crwdns121334:0crwdne121334:0",
     "known-issues": "crwdns105438:0crwdne105438:0",
     "statblock-doesnt-support": "crwdns105440:0crwdne105440:0",
     "spell-information": "crwdns105442:0crwdne105442:0",
@@ -1164,9 +1171,15 @@
     "arcane-background-indicator-description": "crwdns110874:0crwdne110874:0",
     "fixed-copyright-issue": "crwdns110876:0crwdne110876:0",
     "start-attributes-at-d6-not-d4": "crwdns115866:0crwdne115866:0",
+    "fix-rename-climbing-piloting-translations": "crwdns121336:0crwdne121336:0",
+    "fix-attempt-allow-skill-on-by-default": "crwdns121338:0crwdne121338:0",
+    "change-linked-attribute-of-any-skill": "crwdns121340:0crwdne121340:0",
+    "enable-soak-from-settings": "crwdns121342:0crwdne121342:0",
+    "easier-disallow-skill-from-setting": "crwdns121344:0crwdne121344:0",
+    "fix-show-modifier-not-working-at-start": "crwdns121346:0crwdne121346:0",
     "effect": "crwdns115870:0crwdne115870:0",
     "activate-talisman": "crwdns115872:0crwdne115872:0",
-    "added-talismans-section": "crwdns121314:0crwdne121314:0",
+    "added-talismans-section": "crwdns121348:0crwdne121348:0",
     "added-ability-to-start-attributes-at-d6": "crwdns119350:0crwdne119350:0",
     "fix-skill-dropdown-in-weapons": "crwdns119352:0crwdne119352:0",
     "fixed-xp-advance-label-issue": "crwdns119354:0crwdne119354:0"
