--- a/WFRP4CharSheet/translations/pl.json
+++ b/WFRP4CharSheet/translations/pl.json
@@ -126,7 +126,7 @@
 	"MELEE-SPECIALISATIONS-(BASIC)": "SPECJALIZACJE BRONI BIAŁEJ (PODSTAWOWE)",
 	"Melee-i-Basic": "<i>Broń Biała</i> (Prosta)",
 	"Melee-i-Brawling": "<i>Broń Biała</i> (Pięści)",
-	"Melee-i-Cavalry": "<i>Broń Biała</i> (Kawaleryjnka)",
+	"Melee-i-Cavalry": "<i>Broń Biała</i> (Kawaleryjska)",
 	"Melee-i-Fencing": "<i>Broń Biała</i> (Szermiercza)",
 	"Melee-i-Flail": "<i>Broń Biała</i> (Korbacze)",
 	"Melee-i-Parry": "<i>Broń Biała</i> (Parująca)",
