--- a/5th Edition OGL by Roll20/translations/zh.json
+++ b/5th Edition OGL by Roll20/translations/zh.json
@@ -274,7 +274,7 @@
 	"jack-of-all-u": "多才多藝",
 	"attr:-u": "屬性:",
 	"tool-prof-u": "工具熟練項",
-	"weapon-proficiencies-u": "WEAPON PROFICIENCIES",
+	"weapon-proficiencies-u": "武器熟練",
 	"other-prof-langs-u": "其他熟練項 &amp; 語言",
 	"prof-langs-u": "熟練項 &amp; 語言",
 	"init": "先攻",
@@ -381,8 +381,8 @@
 	"subclass:-u": "子職:",
 	"race:-u": "種族:",
 	"subrace:-u": "亞種:",
-	"subrace": "Subrace:",
-	"subrace-ability-increase": "Subrace Ability Score Increase:",
+	"subrace": "亞種:",
+	"subrace-ability-increase": "亞種屬性值加成:",
 	"2nd-class:-u": "第二職業:",
 	"lvl:-u": "等級:",
 	"3rd-class:-u": "第三職業:",
@@ -498,7 +498,7 @@
 	"racial": "Racial",
 	"class": "職業",
 	"feat": "專長",
-	"feats": "Feats",
+	"feats": "專長",
 	"other": "Other",
 	"partial": "部分",
 	"show_all": "顯示全部",
@@ -545,8 +545,8 @@
 	"charmancer-choose-race": "選擇種族:",
 	"charmancer-custom-race-name": "自訂種族名稱:",
 	"charmancer-custom-subclass-name:": "Custom sublass Name:",
-	"charmancer-additional-cantrips": "Additional Cantrips",
-	"charmancer-additional-lvl-1-spells": "Additional Level 1 Spells",
+	"charmancer-additional-cantrips": "額外戲法",
+	"charmancer-additional-lvl-1-spells": "額外一環法術",
 	"suggested-abilities": "建議的屬性: ",
 	"class-spellcasting": "職業施法屬性: ",
 	"ability-score-increase": "屬性值加成:",
@@ -625,43 +625,43 @@
 	"prerequisite:": "先決條件:",
 	"back": "BACK",
 	"back-to-top": "Back to Top",
-	"choose-a-class:": "Choose a Class:",
-	"custom-class-name:": "Custom Class Name",
-	"charmancer-class-features:": "Class Features: ",
+	"choose-a-class:": "選擇職業:",
+	"custom-class-name:": "自訂職業名稱",
+	"charmancer-class-features:": "職業能力: ",
 	"charmancer-subclass-features:": "Subclass Features:",
-	"hit-die:": "Hit Die:",
+	"hit-die:": "生命骰:",
 	"average": "Average",
 	"hp-u": "HP",
-	"saving-throw-proficiency": "Saving Throw Proficiency",
+	"saving-throw-proficiency": "豁免熟練",
 	"armor": "Armor",
-	"equipment": "Equipment:",
-	"language": "Language",
-	"skill": "Skill",
+	"equipment": "裝備:",
+	"language": "語言",
+	"skill": "技能",
 	"tool": "Tool",
-	"weapon": "Weapon",
+	"weapon": "武器",
 	"add-another-feature": "Add Another Feature",
-	"add-another-proficiency": "Add Another Proficiency",
-	"innate-spellcasting:": "Innate Spellcasting:",
-	"spellcasting-ability": "Spellcasting Ability:",
-	"number-of-cantrips": "Number of Cantrips:",
-	"number-of-lvl-1-spells": "Number of Level 1 Spells:",
-	"spell-list": "Spell List:",
-	"ability-score-method": "Ability Score Method:",
+	"add-another-proficiency": "填加其他熟練",
+	"innate-spellcasting:": "天生施法:",
+	"spellcasting-ability": "施法屬性:",
+	"number-of-cantrips": "戲法的數量:",
+	"number-of-lvl-1-spells": "1環法術的數量：",
+	"spell-list": "法術列表:",
+	"ability-score-method": "屬性值決定方法:",
 	"select-your-choices": "Select Your Choices:",
 	"input-your-scores": "Input Your Scores:",
-	"choose-background": "Choose a Background:",
-	"personality-traits": "Personality Traits",
-	"ideal": "Ideal",
-	"bond": "Bond",
-	"flaw": "Flaw",
-	"you-have-chosen-starting-gold": "You have chosen starting gold and do not get equipment from your background.",
-	"you-have-created-custom-class": "You have created a custom class; you can add equipment to the character sheet after you have finished the Charactermancer.",
+	"choose-background": "選擇背景:",
+	"personality-traits": "人格特點",
+	"ideal": "理想",
+	"bond": "牽絆",
+	"flaw": "缺點",
+	"you-have-chosen-starting-gold": "您選擇了起始資金，而不是從您的背景中獲取裝備。",
+	"you-have-created-custom-class": "您已經創建了一個自訂職業; 完成Charactermancer後，您可以在角色卡中添加裝備。",
 	"arcane-is-mystery": "The Arcane is a mystery to you.",
 	"your-character-dont-have-spells-this-lvl": "Your character doesn't have spells at this level. Click “Next” to review your character!",
-	"charmancer-a-feat-represents": "A feat represents accomplishment, grit, determination, and expertise. It is the reward for hard work.",
+	"charmancer-a-feat-represents": "專長代表了成就，勇氣，決心和專業知識。 這是你努力的回報。",
 	"you-really-havent-done": "You really haven't done that much yet",
 	"review-your-choices": "Review your choices:",
-	"race": "Race",
+	"race": "種族",
 	"abilities": "Abilities",
 	"bio": "Bio",
 	"name-background": "Name:",
@@ -669,10 +669,10 @@
 	"charmancer-only-choice-left-is-on-or": "The only choice left is to press on or turn back. If you're editing an existing character, all your existing data will be lost into the void when you apply your changes.",
 	"apply-changes": "Apply Changes",
 	"pick-your-equipment": "Pick your equipment",
-	"you-havent-chosen-background": "You have not yet selected a background.",
-	"you-havent-selected-class": "You have not yet selected a class.",
-	"ability-score": "Ability Score",
-	"you-can-increase-two-abilites": "You can increase two of your abilities by 1, or one of your abilities by 2",
+	"you-havent-chosen-background": "你還沒有選擇背景。",
+	"you-havent-selected-class": "你還沒有選擇職業。",
+	"ability-score": "屬性值",
+	"you-can-increase-two-abilites": "你可以將你的兩個屬性提高1點，或者將你的一個屬性提高2點",
 	"before-leveling": "Before Leveling",
 	"after-leveling": "After Leveling"
 }
