--- a/Mutant Year Zero/translations/de.json
+++ b/Mutant Year Zero/translations/de.json
@@ -108,7 +108,7 @@
 	"regular": "Regulär (1)",
 	"relationships": "BEZIEHUNGEN",
 	"reset-dice": "Würfelpool zurücksetzen",
-	"resources-found": "Resources Found",
+	"resources-found": "Ressourcen gefunden",
 	"role": "Rolle",
 	"roll": "Wurf ",
 	"roll-dice": "Wirf die Würfel!",
@@ -140,7 +140,7 @@
 	"technology": "Technologie",
 	"terrain": "Gelände",
 	"threat": "Bedrohung",
-	"threat-notes": "Threat Notes",
+	"threat-notes": "Hinweise zur Bedrohung",
 	"time-limit": "Zeitlimit",
 	"tiny": "Winzig (0,05)",
 	"total": "Summe",
