--- a/Pathfinder Second Edition by Roll20/translations/fr.json
+++ b/Pathfinder Second Edition by Roll20/translations/fr.json
@@ -42,8 +42,8 @@
 	"_-daily-uses": "Usages quotidien",
 	"a-successful-sav": "Une sauvegarde réussie :",
 	"ability": "caractéristiques",
-	"ability_modifier": "ability modifier",
-	"ability_modifiers": "ability modifiers",
+	"ability_modifier": "modificateur de Caractéristique",
+	"ability_modifiers": "modificateurs de caractéristique",
 	"ability_scores": "caractéristiques",
 	"abjuration": "ABJURATION",
 	"ac": "ca",
@@ -60,13 +60,13 @@
 	"acrobatics_rank_select": "Rang",
 	"acrobatics_temporary": "Mod. temporaire",
 	"action": "action",
-	"action_activity": "action/activity",
-	"action_description": "action description",
-	"action_name": "action name",
-	"action_source": "action source",
-	"action_traits": "action traits",
-	"action_trigger": "action trigger",
-	"action_type": "action type",
+	"action_activity": "action/activité",
+	"action_description": "description de l'action",
+	"action_name": "nom de l'action",
+	"action_source": "source de l'action",
+	"action_traits": "attributs de l'action",
+	"action_trigger": "déclencheur de l'action",
+	"action_type": "type d'action",
 	"actions": "actions",
 	"actions_and_activities": "actions et activités",
 	"age": "âge",
@@ -127,7 +127,7 @@
 	"b": "c",
 	"background": "historique",
 	"base": "base",
-	"based-dc_": "Based DC ",
+	"based-dc_": "DD de base ",
 	"beliefs": "croyances",
 	"birthplace": "lieu de naissance",
 	"bludgeoning": "contondant",
@@ -135,7 +135,7 @@
 	"bonus_feat": "talent bonus",
 	"bonus_feat_notes": "Notes",
 	"bonus_feats": "talents bonus",
-	"bow": "bow",
+	"bow": "arc",
 	"bt": "sc",
 	"bulk": "enc.",
 	"campaign_notes": "Notes de campagne",
@@ -174,10 +174,10 @@
 	"class_feats_and_abilities": "Talents et capacités de classe",
 	"claw": "griffes",
 	"con": "con",
-	"condition": "condition",
+	"condition": "état",
 	"condition_name": "Nom",
 	"condition_settings": "Modifier",
-	"conditions": "conditions",
+	"conditions": "états",
 	"conditions_notes": "Notes",
 	"conjuration": "CONJURATION",
 	"constant": "PERMANENT",
@@ -478,9 +478,9 @@
 	"npc_placeholder_speed": "20 feet, swim 80 feet",
 	"npc_placeholder_speed_notes": "swim 80 feet",
 	"npc_placeholder_traits": "rare, aquatic, humanoid",
-	"npc_placeholder_worn_item": "+1 shortsword",
-	"occult power": "OCCULT POWER",
-	"occult spell": "OCCULT SPELL",
+	"npc_placeholder_worn_item": "épée courte +1",
+	"occult power": "POUVOIR OCCULTE",
+	"occult spell": "SORT OCCULTE",
 	"occult": "occulte",
 	"occultism": "occultisme",
 	"occultism_ability_input": "Caractéristique",
@@ -806,5 +806,9 @@
 	"pc-or-npc-info": "This option sets new characters to default to the PC character sheet or NPC card style sheet. It defaults to PC (Player Character). Set to NPC is useful if the player characters have already been created and all new character sheets added to the game will likely represent non player characters.",
 	"qty": "qt.",
 	"quantity": "quantity",
-	"whisp-rolls-gm-info": "All sheet rolls are sent to all players in chat by default. Query Whisper option gives you a prompt with each roll of whether or not the roll should be sent privately only to yourself and the GM. Always Whisper Rolls will send all rolls only to yourself and the GM."
+	"whisp-rolls-gm-info": "All sheet rolls are sent to all players in chat by default. Query Whisper option gives you a prompt with each roll of whether or not the roll should be sent privately only to yourself and the GM. Always Whisper Rolls will send all rolls only to yourself and the GM.",
+	"melee_attack_damage_additional": "melee attack additional damage",
+	"damage_additional": "additional damage",
+	"damage_additional_placeholder": "[[1d6]] acid, [[1d6]] chaotic, and [[1d6]] evil, and [[2d6]] slashing vs. plants",
+	"range_attack_damage_additional": "range attack additional damage"
 }
