--- a/SavageWorlds-Tabbed/translations/de.json
+++ b/SavageWorlds-Tabbed/translations/de.json
@@ -323,8 +323,8 @@
     "effects": "Effekte",
     "activate": "Aktivieren",
     "effects-notes": "Effkte/Notizen/...",
-    "note-template-unique-repeating-item": "&amp;{template:solidtrait} kann mit &amp;{template:spadestrait2} ersetzt werden. &lt;id&gt; repräsentiert den einzelnen der sich wiederholenden Gegenstände; um diesen Wert zu finden, stelle sicher, dass deine Makro-Schnelleiste aktiviert ist und ziehe den Würfel-Button für den Gegenstand zu der Makro-Schnelleiste - das &lt;id&gt; wird mit einem Minus-Symbol ersetzt. Ersetzte \"&lt;id&gt;\" mit dem einzigartigen Wert, der auf dem Button in der Schnellmakro-Leiste angezeigt wird. Du kannst den Button von der Makroleiste entfernen, sobald du &lt;id&gt; hast.",
-    "note-template-unique-repeating-item-2": "Die <span> &lt;id&gt; </span> repräsentiert den einzelnen der sich wiederholenden Gegenstände. Um diesen Wert zu finden, stelle sicher, dass deine Makro-Schnelleiste aktiviert ist und ziehe den Würfel-Button für den Gegenstand zu der Makro-Schnelleiste - das &lt;id&gt; wird mit einem Minus-Symbol ersetzt. Ersetzte \"&lt;id&gt;\" mit dem einzigartigen Wert, der auf dem Button in der Schnellmakro-Leiste angezeigt wird. Du kannst den Button von der Makroleiste entfernen, sobald du &lt;id&gt; hast.",
+    "note-template-unique-repeating-item": "&amp;{template:solidtrait} kann mit &amp;{template:spadestrait2} ersetzt werden. &lt;id&gt; repräsentiert den einzelnen der sich wiederholenden Gegenstände; um diesen Wert zu finden, stelle sicher, dass deine Makro-Schnelleiste aktiviert ist und ziehe den Würfel-Button für den Gegenstand zu der Makro-Schnelleiste - das &lt;id&gt; wird mit einem Minus-Symbol ersetzt. Ersetzte \\"&lt;id&gt;\\" mit dem einzigartigen Wert, der auf dem Button in der Schnellmakro-Leiste angezeigt wird. Du kannst den Button von der Makroleiste entfernen, sobald du &lt;id&gt; hast.",
+    "note-template-unique-repeating-item-2": "Die <span> &lt;id&gt; </span> repräsentiert den einzelnen der sich wiederholenden Gegenstände. Um diesen Wert zu finden, stelle sicher, dass deine Makro-Schnelleiste aktiviert ist und ziehe den Würfel-Button für den Gegenstand zu der Makro-Schnelleiste - das &lt;id&gt; wird mit einem Minus-Symbol ersetzt. Ersetzte \\"&lt;id&gt;\\" mit dem einzigartigen Wert, der auf dem Button in der Schnellmakro-Leiste angezeigt wird. Du kannst den Button von der Makroleiste entfernen, sobald du &lt;id&gt; hast.",
     "quest-log": "Quest-Log",
     "quest-title": "Quest-Titel",
     "boss": "Auftraggeber",
@@ -613,12 +613,12 @@
     "withdraw-text": "Angrenzende Feinde erhalten einen freien Angriff.",
     "movement": "Bewegung",
     "movement-text": "Nicht nur herumstehen, auch bewegen!",
-    "move-crawling-text": "Kriechend: 2\"/Runde, gilt als Liegend.",
+    "move-crawling-text": "Kriechend: 2\\"/Runde, gilt als Liegend.",
     "move-crouching-text": "Duckend: Halbe BW bewegen, Fernkampfangriffe -1.",
     "move-walking-text": "Gehend: BW als freie Aktion laufen.",
     "move-running-text": "Rennend: Volle BW +1W6 rennend, danach -2 auf alle Aktionen.",
-    "move-jumping-text": "Springend: Horizontal 1\" (stillstehend), 2\" rennend. Erfolgreicher Stärke-Wurf +1\"",
-    "move-go-prone-text": "Fallen lassen: Jederzeit als Aktion, aufstehen kostet 2\" BW.",
+    "move-jumping-text": "Springend: Horizontal 1\\" (stillstehend), 2\\" rennend. Erfolgreicher Stärke-Wurf +1\\"",
+    "move-go-prone-text": "Fallen lassen: Jederzeit als Aktion, aufstehen kostet 2\\" BW.",
     "test-of-wills": "Geistige Duelle",
     "test-of-wills-text": "Provozieren oder Einschüchtern. Bei Erfolg +2 für die nächste eigene Aktion gegen den Gegner, bei Steigerung +Angeschlagen.",
     "tricks": "Tricks",
@@ -1155,14 +1155,14 @@
     "unshake-template-not-working-when-skill-equal-joker": "Unshake roll would not display failure when Skill roll and Wild die were equal.",
     "missing-translations-default-sheet-settings-rename-piloting-climbing": "Default sheet settings : missing translations entries for 'rename piloting' and 'rename climbing' settings options.",
     "renaming-skills-default-sheet-settings-not-working": "Default sheet settings : Renaming skills on the Game Setting page would not transfer in game on character sheets.",
-    "added-animal-smarts": "Ability to flag Smarts as \"Animal Intelligence\", which then appears as (A) in character sheet and statblocks.",
+    "added-animal-smarts": "Ability to flag Smarts as \\"Animal Intelligence\\", which then appears as (A) in character sheet and statblocks.",
     "statblocks-rolling-smarts-spirit-would-fail": "StatBlocks : rolling for Smarts or Spirit from StatBlocks would fail.",
     "fixed-encumbrance-for-strength-over-d12": "Fixed SWADE Encumbrance rules support when Strength is d12+x. Each x will add an additional 20 to the loadlimit.",
     "spells-now-part-of-statblock": "Spells are now part of the Statblock output",
     "support-for-multiple-arcane-backgrounds": "Support for multiple Arcane Backgrounds; a character can have up to five (5) different ABs, each with its own power point pool. See the documentation section for more details.",
     "powerlist-macro-support": "As part of the statblock update to include powers, there are six (6) new fields for macro support. @{charpowers} will output the information how it's used in the statblock. @{ab1powerlist} will output a comma separated values list of powers, for the first Arcane Background, using the ability command button format (e.g. [power name](~powerbutton)). The other five fields are: @{ab2powerlist}, @{ab3powerlist}, @{ab4powerlist}, @{ab5powerlist} (each one corresponding to the relevant Arcane Background).",
     "maincv-p23-v1": "The sheet now supports multiple arcane backgrounds (up to five).  To configure multiple arcane backgrounds, click the hammer and wrench icon (<span class='sheet-pictos'>x</span>). This will reveal the Powers Configuration window. Here you can modify:",
-    "section-header-description": "The Section Header: this will allow you to change the overall section header to whatever makes sense for your character. If s/he has a single arcane background, perhaps \"Spells\" is sufficient; if there are multiple arcane backgrounds, perhaps \"Powers\" makes more sense. Regardless, changing this, changes the lable in the gray header bar.",
+    "section-header-description": "The Section Header: this will allow you to change the overall section header to whatever makes sense for your character. If s/he has a single arcane background, perhaps \\"Spells\\" is sufficient; if there are multiple arcane backgrounds, perhaps \\"Powers\\" makes more sense. Regardless, changing this, changes the lable in the gray header bar.",
     "column-header-description": "The Column Header: this changes the header for the column with the power name. Because there is only one column for the header name, this will be used for all arcane background powers, so if there are multiple arcane backgrounds for the charcter, something generic would be more appropriate.",
     "power-points-abbreviation-description": "The Power Point Header: this changes the abbreviation used for Power Points in the column header section. Like the Column Header setting this is for all powers and is used as a column header. There is a character limit for the abbreviation, just so the column view doesn't get messed up.",
     "arcane-background-name-description": "Arcane Background: you can now name each of your different Arcane Backgrounds. The default is AB1[-5].",
