--- a/The Sprawl/translations/ko.json
+++ b/The Sprawl/translations/ko.json
@@ -26,7 +26,7 @@
     "drone-image": "drone image",
     "drone-style": "스타일",
     "drones": "드론",
-    "edge": "Edge",
+    "edge": "예리",
     "equipment": "장비",
     "experience": "경험치",
     "eyes": "눈",
@@ -95,7 +95,7 @@
     "user": "User",
     "vehicle": "차량",
     "vehicle-image": "vehicle image",
-    "vehicles": "Vehicles",
+    "vehicles": "차량",
     "vehicles-and-drones": "차량과 드론",
     "weaknesses": "약점",
     "weapons": "무기",
